@@ -63,8 +63,8 @@ end
 
 # >-----------------------------[ Run Bundler ]-------------------------------<
 
-say_wizard "Running 'bundle install'. This will take a while."
-run 'bundle install'
+say_wizard "Installing gems. This will take a while."
+run 'bundle install --without production'
 say_wizard "Running 'after bundler' callbacks."
 require 'bundler/setup'
 @after_blocks.each{|b| config = @configs[b[0]] || {}; @current_recipe = b[0]; b[1].call}
